# aa-Corp-Hauling-Tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
corphauling/: __init__.py  admin.py  apps.py  auth_hooks.py  esi.py  fit.py  forms.py  hauls.py  models.py  piloot.py  profit.py  tasks.py  urls.py  views.py
corphauling/migrations/: 0001_initial.py  0002_piloot_fit_piloot_hold_handmatig_piloot_jf_skill_and_more.py  0004_corpfit.py  0005_remove_piloot_jdc_remove_piloot_jf_skill_and_more.py  0007_delete_config_remove_schip_corp_fit_and_more.py  0009_haul_date_accepted.py  0010_instellingen.py
corphauling/static/corphauling/: corphauling.css
corphauling/templates/corphauling/: _couriers.html  base.html  contracts.html  hauls.html  profiel.html
tools/: screenshot-bord.mjs
