[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-corp-hauling"
description = "Corp Hauling plugin voor Alliance Auth — open koeriers-contracten van een corporatie, met netto-winstberekening."
readme = "README.md"
keywords = [
    "allianceauth",
    "contracts",
    "courier",
    "hauling",
    "eveonline",
]
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Dutch Legions" },
]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=5",
    "django-esi",
]

[tool.hatch]
version.path = "corphauling/__init__.py"
build.include = [
    "/corphauling",
]
